@@ -17,7 +17,7 @@
 .\" WARRANTIES, INCLUDING, WITHOUT LIMITATION, THE IMPLIED WARRANTIES OF
 .\" MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE.
 .\"
-.TH PCAP_DUMP_CLOSE 3PCAP "3 January 2014"
+.TH PCAP_DUMP_CLOSE 3PCAP "12 October 2024"
 .SH NAME
 pcap_dump_close \- close a savefile being written to
 .SH SYNOPSIS
@@ -32,7 +32,13 @@ void pcap_dump_close(pcap_dumper_t *p);
 .fi
 .SH DESCRIPTION
 .BR pcap_dump_close ()
-closes the ``savefile''.
+closes the ``savefile'' associated with
+.I p
+and deallocates resources. This means that, for example, if
+.I p
+refers to a savefile that was opened with
+.BR pcap_dump_fopen (),
+the stream provided to that routine will be closed.
 .SH SEE ALSO
 .BR pcap (3PCAP),
 .BR pcap_dump_open (3PCAP),
