@@ -17,7 +17,7 @@
 .\" WARRANTIES, INCLUDING, WITHOUT LIMITATION, THE IMPLIED WARRANTIES OF
 .\" MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE.
 .\"
-.TH PCAP_OPEN_OFFLINE 3PCAP "30 November 2023"
+.TH PCAP_OPEN_OFFLINE 3PCAP "12 October 2024"
 .SH NAME
 pcap_open_offline, pcap_open_offline_with_tstamp_precision,
 pcap_fopen_offline, pcap_fopen_offline_with_tstamp_precision \- open a saved capture file for reading
@@ -80,7 +80,11 @@ Alternatively, you may call
 or
 .BR pcap_fopen_offline_with_tstamp_precision ()
 to read dumped data from an existing open stream
-.IR fp .
+.IR fp ;
+this stream will be closed by a subsequent call to
+.B pcap_close (3PCAP)
+unless it is
+.BR stdin .
 .BR pcap_fopen_offline_with_tstamp_precision ()
 takes an additional
 .I precision
